--- a/src/app/wizard/wizard.component.html
+++ b/src/app/wizard/wizard.component.html
@@ -302,7 +302,7 @@
 
               <div class="chatbubble" style="border-radius: 10px!important;">
                 <p>
-                  ලබා දී ඇති ිි අතරින් කොළ පැහැ t-shirt එකෙහි හි ඔබට අවශ්‍ය size ක තිබේ දැයි අහන්න.
+                  ලබා දී ඇති t-shirt අතරින් කොළ පැහැ t-shirt එකෙහි හි ඔබට අවශ්‍ය size ක තිබේ දැයි අහන්න.
                </p>
               </div>
 
@@ -497,7 +497,7 @@
                 </div>
                 <div class="row" style="margin-bottom: 15px;">
                   <div class="col-md-12">
-                    <button mat-icon-button class="right"  [disabled]="!cancelOrder" matStepperNext>
+                    <button mat-icon-button class="right"  [disabled]="!cancelOrder" matStepperNext  (click)="uploadData()">
                       <img src="../../assets/img/sendicon.png" style="max-width: 70%;" alt="">
                     </button>
                     
