--- a/src/app/wizard/wizard.component.html
+++ b/src/app/wizard/wizard.component.html
@@ -530,6 +530,7 @@
           </mat-card-title>
           <img src="../../assets/img/thanks.gif" alt="" style="width: 80%;">
         </div>
+        <!-- <button mat-raised-button color="warn" class="nxtbtn" >Done</button> -->
       </mat-card>
       <!-- <div>
         <button mat-button matStepperPrevious>Back</button>
